<resources>
    <string name="app_name">tictactoe</string>
    <string name="name">Kółko Krzyżyk</string>
    <string name="multiplayer">Nowa gra wieloosobowa</string>
    <string name="hotseat">Nowa gra hotseat</string>
    <string name="score">Tablica wyników</string>
    <string name="exit">Wyjście z gry</string>
    <string name="player_1">Player 1: 0</string>
    <string name="player_2">Player 2: 0</string>
    <string name="reset">reset</string>
</resources>
