<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

    <TextView
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="5"
        android:text="@string/name"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold"
        />

<!--    <Switch-->
<!--        android:id="@+id/switch1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="128dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_weight="5"-->
<!--        android:text="VS Computer"-->
<!--        android:textSize="36sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.456"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/button_main"
        android:text="@string/multiplayer"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_2"
        android:background="@drawable/button_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/hotseat"
        android:textSize="36sp" />
    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:background="@drawable/button_main"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/score"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="match_parent"
        android:background="@drawable/button_main"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/exit"
        android:textSize="36sp" />
</LinearLayout>